--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -4,8 +4,8 @@
 \usepackage{subfig}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-%\usepackage{geometry}
-%\geometry{verbose,lmargin=2cm,rmargin=2cm, bmargin=3cm, tmargin=3cm}
+\usepackage{geometry}
+\geometry{verbose,lmargin=2cm,rmargin=2cm, bmargin=3cm, tmargin=3cm}
 \usepackage{enumitem}
 \usepackage{wrapfig}
 \usepackage{tikz}
@@ -81,7 +81,7 @@
 
   \begin{figure}[H]
     \center
-    \includegraphics[width=4cm]{scripts/figs/diagram_1.png}
+    \includegraphics[width=7.5cm]{scripts/figs/diagram_1.png}
     \caption{Aparature to test the polarization of light emitted from a spectral lamp using a polarization filter with variable angle $\theta$ as an analyzator and measuring the intensity of the filtered light using the luxmeter.}
     \label{fig:lux_ana_lamp}
   \end{figure}
@@ -105,7 +105,7 @@
 
   \begin{figure}[H]
     \center
-    \includegraphics[width=4cm]{scripts/ppolar.png}
+    \includegraphics[width=5cm]{scripts/ppolar.png}
     \caption{Intensity profile due to p-polarized light, where $\phi_P$ denotes the Brewster angle.}
   \end{figure}
 
