--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -68,6 +68,7 @@
 \begin{abstract}
   Studying the properties of linearly and circularly polarized light and testing how well the properties match up to theoretical predictions.
 \end{abstract}
+
 \twocolumn
 
 %\tableofcontents
@@ -78,6 +79,11 @@
 \section{\label{sect:theory}Theory}
 
 \section{\label{section:experimental}Experimental Procedure} 
+  
+  In order to minimize the effects that ambient light may have on the following experiments, the windows in the room were covered up and all lights not related to the experiment were turned off whilst data was being recorded, or observations were made.
+
+  \subsection{Checking the polarization of the spectral lamp}
+    In order to determine whether or not the light emitted from a speciffic Sodium spectral lamp, the intensity of light was measured using a luxmeter after having gone through a polarization filter of variable angle acting as an analyzator, depicted in Fig \ref{fig:lux_ana_lamp}. When changing the angle of the analyzator, we defined a positive and negative direction, which was kept for all subsequent measurements using polarization filters. The angle of the polarization filter was changed in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ and the intensity of the light measured by the luxmeter was noted for each angle. 
 
   \begin{figure}[H]
     \center
