--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -85,12 +85,24 @@
   \subsection{Checking the polarization of the spectral lamp}
     In order to determine whether or not the light emitted from a speciffic Sodium spectral lamp, the intensity of light was measured using a luxmeter after having gone through a polarization filter of variable angle acting as an analyzator, depicted in Fig \ref{fig:lux_ana_lamp}. When changing the angle of the analyzator, we defined a positive and negative direction, which was kept for all subsequent measurements using polarization filters. The angle of the polarization filter was changed in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ and the intensity of the light measured by the luxmeter was noted for each angle. 
 
+
   \begin{figure}[H]
     \center
     \includegraphics[width=8cm]{scripts/figs/diagram_1.png}
     \caption{Aparature to test the polarization of light emitted from a spectral lamp using a polarization filter with variable angle $\theta$ as an analyzator and measuring the intensity of the filtered light using the luxmeter.}
     \label{fig:lux_ana_lamp}
   \end{figure}
+
+  \subsection{Testing Malus' law}
+
+
+    \begin{figure}[H]
+      \center
+      \includegraphics[width=8cm]{scripts/figs/diagram_2.png}
+      \caption{Aparature to test Malus' law.}
+      \label{fig:lux_ana_pola_lamp}
+    \end{figure}
+
 
 \section{\label{sect:results}Results}
   
