--- a/Rapport 6/references_rep6.bib
+++ b/Rapport 6/references_rep6.bib
@@ -1,6 +1,6 @@
 @misc{ data:luxmeter,
     author = "{Extech Instruments}",
-    title = "Model 401025 Digital Light Meter",
+    title = "Model 401025 Digital Light Meter, \url{http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/extech_lysma%CC%8Aler_401025_manual.pdf}",
     year = "2005",
     howpublished = "\url{http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/extech_lysma%CC%8Aler_401025_manual.pdf}",
     note = "[Online; accessed 30-May-2018]"
