--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -78,38 +78,48 @@
 
 \section{\label{sect:theory}Theory}
 
+  \subsection{Birefringence}
+    Certain materials, such as Calcite crystal exhibit birefringent behavior, where it effectively has two separate refractive indices for light polarized at right angle to each other, meaning that when unpolarized light is passed through the crystal, two displaced images will be visible. Birefringence can occur for different reasons, but in the case of crystalline Calcite, it is due to the uniaxial geometry of its lattice (See fig. \ref{fig:calcite}). Where light which is polarized is perpendicular to this optical axis will follow a certain, set refractive index, regardless of the crystals orientation. 
+
+    \begin{figure}[H]
+      \center
+      \includegraphics[width=8cm]{scripts/figs/calcite.jpg}
+      \caption{Crystaline structure of calcite (Source:\url{http://lecturedemo.ph.unimelb.edu.au/Optics/Crystal-optics/Oh-1-Calcite-Crystal-Model/Calcite-Diagram)}}
+      \label{fig:calcite}
+    \end{figure}
+
 \section{\label{section:experimental}Experimental Procedure} 
   
   In order to minimize the effects that ambient light may have on the following experiments, the windows in the room were covered up and all lights not related to the experiment were turned off whilst data was being recorded, or observations were made.
 
   \subsection{\label{subsect:polar_lamp}Checking the polarization of the spectral lamp}
-    In order to determine whether or not the light emitted from a speciffic Sodium spectral lamp, the intensity of light was measured using a luxmeter\cite{data:luxmeter} after having gone through a polarization filter of variable angle acting as an analyzator, depicted in Fig \ref{fig:lux_ana_lamp}. When changing the angle of the analyzator, we defined a positive and negative direction, which was kept for all subsequent measurements using polarization filters. The angle of the polarization filter was changed in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ and the intensity of the light measured by the luxmeter was noted for each angle. 
+    In order to determine whether or not the light emitted from a specific Sodium spectral lamp, the intensity of light was measured using a luxmeter\cite{data:luxmeter} after having gone through a polarization filter of variable angle acting as an analyzer, depicted in Fig \ref{fig:lux_ana_lamp}. When changing the angle of the analyzer, we defined a positive and negative direction, which was kept for all subsequent measurements using polarization filters. The angle of the polarization filter was changed in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ and the intensity of the light measured by the luxmeter was noted for each angle. 
 
 
   \begin{figure}[H]
     \center
     \includegraphics[width=8cm]{scripts/figs/diagram_1.png}
-    \caption{Aparature to test the polarization of light emitted from a spectral lamp using a polarization filter with variable angle $\theta$ as an analyzator and measuring the intensity of the filtered light using the luxmeter.}
+    \caption{Aparature to test the polarization of light emitted from a spectral lamp using a polarization filter with variable angle $\theta$ as an analyzer and measuring the intensity of the filtered light using the luxmeter.}
     \label{fig:lux_ana_lamp}
   \end{figure}
 
   \subsection{Testing Malus' law}
 
-    In order to test Malus' law experimentally, we added a second polarization filter to our existing aperature (see sect. \ref{subsect:polar_lamp}), setting the first polarization filter to a fixed angle at $0^\circ$ whilst the second one is used as the analyzator, depicted in Fig. \ref{fig:lux_ana_pola_lamp}. In order to minimize the effects that ambient light and other potential contaminants, the apparatus was kept as tightly stacked as possible. The intensity registered by the luxmeter was again measured in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ which was noted in the lab journal. 
+    In order to test Malus' law experimentally, we added a second polarization filter to our existing aperature (see sect. \ref{subsect:polar_lamp}), setting the first polarization filter to a fixed angle at $0^\circ$ whilst the second one is used as the analyzer, depicted in Fig. \ref{fig:lux_ana_pola_lamp}. In order to minimize the effects that ambient light and other potential contaminants, the apparatus was kept as tightly stacked as possible. The intensity registered by the luxmeter was again measured in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ which was noted in the lab journal. 
 
     \begin{figure}[H]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_2.png}
-      \caption{Aparature to test Malus' law, where the polarizator is kept at a constant angle while the analyzator is varied.}
+      \caption{Aparature to test Malus' law, where the polarizator is kept at a constant angle while the analyzer is varied.}
       \label{fig:lux_ana_pola_lamp}
     \end{figure}
 
-    Afterwards, a third polarization filter was placed after the analyzator and set to a fixed angle at $90^\circ$ (see Fig. \ref{fig:lux_pola_ana_pola_lamp}). The angle of the analyzator was once again varied as before, and the intensity recorded by the luxmeter was noted in the journal.
+    Afterwards, a third polarization filter was placed after the analyzer and set to a fixed angle at $90^\circ$ (see Fig. \ref{fig:lux_pola_ana_pola_lamp}). The angle of the analyzer was once again varied as before, and the intensity recorded by the luxmeter was noted in the journal.
 
     \begin{figure}[H]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_3.png}
-      \caption{Alternative aparature to test Malus' law, where the two polarizators are kept at a constant angle while the analyzator is varied.}
+      \caption{Alternative aparature to test Malus' law, where the two polarizators are kept at a constant angle while the analyzer is varied.}
       \label{fig:lux_pola_ana_pola_lamp}
     \end{figure}
 
@@ -125,7 +135,8 @@
       \label{fig:mod_spectro}
     \end{figure}
 
-  \subsection{Exploring the optical properties of Calcite crystal}
+  \subsection{Observing birefringence in crystalline Calcite}
+    We had two samples of crystalline calcite. One of which was naturally occurring, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent\footnote{I believe the particular type of calcite used is named Iceland spar, or at the very least, it looks quite similar to it. See \url{https://en.wikipedia.org/wiki/Iceland_spar}}, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
 
 
 \section{\label{sect:results}Results}
