--- a/Rapport 6/references_rep6.bib
+++ b/Rapport 6/references_rep6.bib
@@ -5,3 +5,11 @@
     howpublished = "\url{http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/extech_lysma%CC%8Aler_401025_manual.pdf}",
     note = "[Online; accessed 30-May-2018]"
   }
+
+  @misc{ wiki:birefringence,
+    author = "{Wikipedia contributors}",
+    title = "Birefringence --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2018",
+    url = "https://en.wikipedia.org/w/index.php?title=Birefringence&oldid=840700183",
+    note = "[Online; accessed 30-May-2018]"
+  }
