--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -84,7 +84,7 @@
     \begin{figure}[H]
       \center
       \includegraphics[width=8cm]{scripts/figs/calcite.jpg}
-      \caption{Crystaline structure of calcite (Source:\url{http://lecturedemo.ph.unimelb.edu.au/Optics/Crystal-optics/Oh-1-Calcite-Crystal-Model/Calcite-Diagram)}}
+      \caption{Crystaline structure of calcite (Source: \url{http://lecturedemo.ph.unimelb.edu.au/Optics/Crystal-optics/Oh-1-Calcite-Crystal-Model/Calcite-Diagram)}}
       \label{fig:calcite}
     \end{figure}
 
@@ -136,7 +136,9 @@
     \end{figure}
 
   \subsection{Observing birefringence in crystalline Calcite}
-    We had two samples of crystalline calcite. One of which was naturally occurring, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent\footnote{I believe the particular type of calcite used is named Iceland spar, or at the very least, it looks quite similar to it. See \url{https://en.wikipedia.org/wiki/Iceland_spar}}, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
+    We had two samples of crystalline calcite. One of which was naturally occurring sample, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent\footnote{I believe the particular type of calcite used is named Iceland spar, or at the very least, it looks quite similar to it. See \url{https://en.wikipedia.org/wiki/Iceland_spar}}, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
+
+    Afterwards, we used an aparature as the one depicted in Fig. INSERT REFERENCE TO FIGURE HERE to investigate how the crystals affected a thin beam of light which is passed through it. The crystals were held inbetween the analysator and lens, and we investigated how the intensity of the dots projected on the screen varied as we changed the angle of the analyzator.
 
 
 \section{\label{sect:results}Results}
@@ -167,6 +169,8 @@
     \includegraphics[width=8cm]{scripts/spolar.png}
     \caption{Intensity profile due to p-polarized light from two separate attempts of the experiment. Note that the measurements for angles prior to the peak are to be negated as discussed in the experimental section.}
   \end{figure}
+
+  \subsection{Observations from }
 
 \section{\label{sect:discuss}Discussion}
 
