--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -94,7 +94,7 @@
   
   In order to minimize the effects that ambient light may have on the following experiments, the windows in the room were covered up and all lights not related to the experiment were turned off whilst data was being recorded, or observations were made.
 
-  In all subsequent parts of this report, the spectral lamb to which i refer is a sodioum spectral lamp emitting close to monochromatic light of wavelength $\lambda=589nm$ in air.
+  In all subsequent parts of this report, the spectral lamb to which i refer is a sodioum spectral lamp emitting close to monochromatic light of wavelength $\lambda=589$nm in air.
 
   \subsection{\label{subsect:polar_lamp}Checking the polarization of the spectral lamp}
     In order to determine whether or not the light emitted from the spectral lamp is polarized, the intensity of light was measured using a luxmeter\cite{data:luxmeter} after having gone through a polarization filter of variable angle acting as an analyzer, depicted in Fig \ref{fig:lux_ana_lamp}. When changing the angle of the analyzer, we defined a positive and negative direction, which was kept for all subsequent measurements using polarization filters. The angle of the polarization filter was changed in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ and the intensity of the light measured by the luxmeter was noted for each angle. 
@@ -127,7 +127,7 @@
       \label{fig:lux_pola_ana_pola_lamp}
     \end{figure}
 
-    \subsection{Reflection of polarized light}
+    \subsection{Reflection of polarized light\label{subsect:reflection_experimental}}
       In order to test how the intensity of S and P-polarized light, reflected from a prism with a varying angle of incidence, a modified spectroscope was used as shown in Fig. \ref{fig:mod_spectro}. the angle, and intensity was recorded digitally on a computer using capstone. The angle recorder only measured the change in angle from starting the recording, so there was a notable uncertainty in zeroing the apparatus before starting. The sights, used to read the angle manually were blocked by a cable, such that it could not be used properly, and the geometry of the spectrometer itself was not perfect. For large angles, i.e when the incident line is nearly parallel with the plane of reflection, it was observed that some of the light was transmitted through the prism rather than being reflected. This is likely due to the prism not being properly aligned with the laser, which was reflected in the results. As such, the data for large angles $\phi$ do not follow what is expected, which must be taken into account when reading the results.
 
       As for making the measurements, the polarisator was set either parallel or tangential to the reflective plane of the prism and the prism was adjusted such that the reflective plane was paralell to the laser beam. Captstone was then started and the luxmeter and prism were slowly rotated untill the angle between the laser and the luxmeter was roughly $65^\circ$. This was repeated for both S and P-polarized light.
@@ -141,26 +141,56 @@
 
   \subsection{Light transmitted through an angled glass plate}
 
+    In order to investigate how light is transmitted through a glass plate, we used an aparature as the one depcited in Fig. \ref{fig:glassplate}. The glass plate was oriented tangentilly to the incoming, unpolarized light beam, and the angle which it made in the direction paralell to the beam could be adjusted. There was also a anglemeasurer with a maker which allowed us to read the angle which the glass plate had to the vertical axis. It was also noted that the glass plate used is of the same material as the prism used in section \ref{subsect:reflection_experimental}.
+
+    The distance between the single slit and convex lens was adjusted untill the line projected onto the screen was in focus.
+
+    Afterwards, the polarization of the light after having passed through the glass plate was then observed by adjusting the analyzator for different angles of the glass plate. In particular, we adjusted the glass plate to the brewster angle which was found for the prism in section \ref{subsect:reflection_experimental}.
+
+    \begin{figure}[H]
+      \center
+      \includegraphics[width=8cm]{scripts/figs/diagram_4.png}
+      \caption{}
+      \label{fig:glassplate}
+    \end{figure}
 
   \subsection{Observing birefringence in crystalline Calcite}
     We had two samples of crystalline calcite. One of which was naturally occurring sample, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent\footnote{I believe the particular type of calcite used is named Iceland spar, or at the very least, it looks quite similar to it. See \url{https://en.wikipedia.org/wiki/Iceland_spar}}, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
 
-    Afterwards, we used an aparature as the one depicted in Fig. INSERT REFERENCE TO FIGURE HERE to investigate how the crystals affected a thin beam of light which is passed through it. The crystals were held inbetween the analysator and lens, and we investigated how the intensity of the dots projected on the screen varied as we changed the angle of the analyzator.
+    Afterwards, we used an aparature as the one depicted in Fig. \ref{fig:calcite} to investigate how the crystals affected a thin beam of light which is passed through it. The crystals were held inbetween the analysator and lens, and we investigated how the intensity of the dots projected on the screen varied as we changed the angle of the analyzator.
+
+    \begin{figure}[H]
+      \center
+      \includegraphics[width=8cm]{scripts/figs/diagram_5.png}
+      \caption{Aperature used to test both the qualitative effects on a thin beam of light being passed through a calcite sample as well as the polarization of this light, which is projected onto the screen.}
+      \label{fig:calcite}
+    \end{figure}
 
   \subsection{Circular polarization of light using Calcite waveplates}
-    In order to investigate the effect of the polarization of light emitted by the spectral lamp when passed through $\lambda /2$ waveplates, where $\lambda=589$, the most abundent wavelength of visible light emitted from the sodium spectral lamp, an aparature as depicted in Fig INSERT REFERENCE was prepared. The aparature allowed for the rotation of the waveplates along the axis paralell to the light being passed through it from the spectral lamp. There was however no markings on the waveplate to indicate its current orientation.
+    In order to investigate the effect of the polarization of light emitted by the spectral lamp when passed through $\lambda /2$ waveplates, where $\lambda=550$, the most abundent wavelength of visible light emitted from the sodium spectral lamp, an aparature as depicted in Fig. \ref{fig:waveplate} was prepared. The aparature allowed for the rotation of the waveplates along the axis paralell to the light being passed through it from the spectral lamp. There was however no markings on the waveplate to indicate its current orientation, which had to be determined by a methodic approach by the use of the analyzator.
 
+    \begin{figure}[H]
+      \center
+      \includegraphics[width=8cm]{scripts/figs/diagram_6.png}
+      \caption{Aparature used to investigate how a calcite waveplate affects the polarization of polarized light}
+      \label{fig:waveplate}
+    \end{figure}
+
+    The polarizator was set to $0^\circ$ and the analyzator to $+90^\circ$. The waveplate is then rotated untill the projected image was at a minima. As we did not have a luxmeter, this was purely based on the observed intensity of the projection on the screen. When the intensity minima is reached with this configuration, the optical axis is at either $0^\circ$ or $90^\circ$ to the vertical axis. We then adjusted the polarizator to $+45^\circ$ and observed how the intensity of the projected light varied when adjusting the analyzator to different angles.
+
+    Afterwards, we added a second $\lambda/4$ waveplate to the aparature, which in combination effectively yields a $\lambda/2$ waveplate. The polarizator was then set to $+45^\circ$ and the analyzator to $-45^\circ$. We then turned the newly added waveplate, while leaving the old one in its previous orientation. The new waveplate was turned untill the projected light reached an intensity maxima. Again, the when this maxima occured was based on our judgement, as no quantitative measurement regarding its intensity was made. When the maxima was reached, the analyzator was turned to $+45^\circ$ and the intensity of the projected light was at a minimum.
     
 
 
 \section{\label{sect:results}Results}
   
-  The intensity measurements presented in table \ref{tab:ana}, where light from a spectral lamp is passed through a single polarization filter has a standard deviation of 19, which is used as the estimated uncertainty for further measurements made with the luxmeter.
+  \subsection{Polarization of light emitted by the Na spectral lamp}
 
+  The polarization of light emitted by the Sodium spectral lamb was investigated using an analyzator, and measured intensities using the luxmeter is presented in Table \ref{tab:ana}. A graph of this data is also provided in Fig. \ref{fig:ana_plot} for further clarity.
 
   \begin{table}[H]
       \center
-      \caption{Measured intensity when passing unpolarized light through a single polarization filter, $\theta$ denoting the angle of the filter. Aparature depicted in Fig. \ref{fig:lux_ana_lamp}}
+      \caption{Measured intensity when passing unpolarized light through a single polarization filter, $\theta$ denoting the angle of the filter. Aparature depicted in Fig. \ref{fig:lux_ana_lamp}. A graph of this data set is shown in Fig. \ref{fig:ana_plot}}
        \begin{tabular}{r | l}
         $\theta$ [deg] & Intensity [Lux] \\ \hline
          \input{scripts/data/ana.dat}
@@ -168,26 +198,45 @@
        \label{tab:ana}
   \end{table}
 
+  \begin{figure}[H]
+    \center
+    \includegraphics[width=8cm]{scripts/polartest.png}
+    \caption{Graphical depiction of the data presented in table \ref{tab:ana}}
+    \label{fig:ana_plot}
+  \end{figure}
 
+  \subsection{Confirming Malus law}
+
+  \begin{figure}[H]
+    \center
+    \includegraphics[width=8cm]{scripts/malus1.png}
+    \caption{$E(\theta)$ denotes the intensity of light measured by the luxmeter as a function of the angle of the analyzator. $\delta m$ and $\delta c$ denote the error of the constants $m$, $c$ in the linear fit of the form $y=mx+c$.}
+    \label{fig:malus1}
+  \end{figure}
+
+
+  \subsection{Intensity of reflected light for S and P polarized light}
 
   \begin{figure}[H]
     \center
     \includegraphics[width=8cm]{scripts/ppolar.png}
-    \caption{Intensity profile due to p-polarized light, where $\phi_P$ denotes the Brewster angle. Note that the measurements for angles prior to the peak are to be negated as discussed in the experimental section.}
+    \caption{Intensity profile due to p-polarized light, where $\phi_P$ denotes the Brewster angle. Note that the measurements for angles prior to the peak are to be ignored as discussed in the experimental section.}
   \end{figure}
 
   \begin{figure}[H]
     \center
     \includegraphics[width=8cm]{scripts/spolar.png}
-    \caption{Intensity profile due to p-polarized light from two separate attempts of the experiment. Note that the measurements for angles prior to the peak are to be negated as discussed in the experimental section.}
+    \caption{Intensity profile due to p-polarized light from two separate attempts of the experiment. Note that the measurements for angles prior to the peaks are to be ignored as discussed in the experimental section.}
   \end{figure}
+
+  \subsection{Polarization of light transmitted through glass plate}
 
   \subsection{Observations when looking at light passed through crystaline Calcite}
     When observing text through the naturally occuring sample of crystaline calcite, the birefringence of calcite was observed by the text splitting into two, seemingly identical copies of each other. When placing a the small polarisation filter on top of the crystal and turning it, there were speciffic angles in which the text disapeared, one for each image. Without making any measurements, these angles seemed to be roughly $90^\circ$ relative to each other. Meaning the two images of the text are tangentially polarized relative to each other. 
 
-    When placing the sample in the aparature depicted in Fig. INSERT REFERENCE, there were two small circles of light projected onto the screen when the analyzator was set to $0^\circ$ and $90^\circ$.  Setting the analyzator to $+45^\circ$ resulted in one of the circle disapearing, and setting it to $-45^\circ$ made the other circle disapear.
+    When placing the sample in the aparature depicted in Fig. \ref{fig:calcite}, there were two small circles of light projected onto the screen when the analyzator was set to $0^\circ$ and $90^\circ$.  Setting the analyzator to $+45^\circ$ resulted in one of the circle disapearing, and setting it to $-45^\circ$ made the other circle disapear.
 
-    When looking at the fabricated calcite sample, which was cut tangential to its optical axis. Only one image of the text was visible, and rotating a polarizing filter on top of it had no visible effect on the image. When investigating further, again using the aparature depcited in Fig. INSERT REFERENCE, there was only one circle projected onto the screen and rotating the analyzator had no visible effect on its illuminosity. 
+    When looking at the fabricated calcite sample, which was cut tangential to its optical axis. Only one image of the text was visible, and rotating a polarizing filter on top of it had no visible effect on the image. When investigating further, again using the aparature depcited in Fig. \ref{fig:calcite}, there was only one circle projected onto the screen and rotating the analyzator had no visible effect on its illuminosity. 
 
 \section{\label{sect:discuss}Discussion}
 
