--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -214,6 +214,13 @@
     \label{fig:malus1}
   \end{figure}
 
+  \begin{figure}[H]
+    \center
+    \includegraphics[width=8cm]{scripts/malus2.png}
+    \caption{Intensity of light measured by luxmeter for different angles $\theta$ of analyzator which is positioned between two tangentially polarized polarizators at angles $-90^\circ$, $0$}
+    \label{fig:malus1}
+  \end{figure}
+
 
   \subsection{Intensity of reflected light for S and P polarized light}
 
